Remove hardcoded "-webkit-input-placeholder" from blink::ElementRuleCollector.

- Remove RuleSet::placeholder_pseudo_rules_.
- Use shadow_pseudo_element_rules for "-webkit-input-placeholder" instead.

Bug: 715768
Change-Id: If6d277762c8dab918cb4563a563a3f0936bbac6f
Reviewed-on: https://chromium-review.googlesource.com/640330
Reviewed-by: Rune Lillesveen <rune@opera.com>
Commit-Queue: Rune Lillesveen <rune@opera.com>
Cr-Commit-Position: refs/heads/master@{#498056}
Former-commit-id: 3e1cffdf55fcba33860b537fd860ba934283ae39